// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCFeedback editor plugins.renderNode calls next 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "mockNode",
    }
  }
/>
`;

exports[`MCFeedback editor plugins.renderNode renders a node 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.MCAssessment.MCFeedback",
    }
  }
/>
`;
